fix: handle malformed X-User-ID header gracefully
Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>